--- a/notebooks/local_ollama_rag.ipynb
+++ b/notebooks/local_ollama_rag.ipynb
@@ -126,28 +126,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f22e46b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# from langchain_community.document_loaders import UnstructuredPDFLoader\n",
-    "\n",
-    "# # local_path = \"WEF_The_Global_Cooperation_Barometer_2024.pdf\"\n",
-    "# local_path = \"data/pdfs/sample/WEF_The_Global_Cooperation_Barometer_2024.pdf\"\n",
-    "\n",
-    "\n",
-    "# if os.path.exists(local_path):\n",
-    "#     loader = UnstructuredPDFLoader(file_path=local_path)\n",
-    "#     data = loader.load()\n",
-    "#     print(\"Chargement réussi, nombre de pages :\", len(data))\n",
-    "# else:\n",
-    "#     print(\"Fichier non trouvé :\", local_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "38119195-9c91-4e58-aa46-8a74244032af",
    "metadata": {
@@ -203,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "014e862c",
    "metadata": {},
    "outputs": [
@@ -232,19 +210,6 @@
     }
    ],
    "source": [
-    "# # 1. First clean up any existing ChromaDB installations\n",
-    "# %pip uninstall -y chromadb\n",
-    "# %pip uninstall -y protobuf\n",
-    "\n",
-    "# # 2. Install specific versions known to work together\n",
-    "# %pip install -q protobuf==3.20.3\n",
-    "# %pip install -q chromadb==0.4.22  # Using a stable older version\n",
-    "# %pip install -q langchain-ollama\n",
-    "\n",
-    "# # 3. Set the environment variable\n",
-    "# import os\n",
-    "# os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"] = \"python\"\n",
-    "# Nettoyage et installation des versions compatibles de chromadb, protobuf et langchain-ollama\n",
     "%pip uninstall -y chromadb\n",
     "%pip uninstall -y protobuf\n",
     "\n",
@@ -358,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f4ed9d91",
    "metadata": {},
    "outputs": [
@@ -372,15 +337,13 @@
     }
    ],
    "source": [
-    "# 3. Set the environment variable\n",
     "import os\n",
     "os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"] = \"python\"\n",
     "\n",
-    "# 4. Now reimport with the new versions\n",
+    "\n",
     "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "\n",
-    "# 5. Try creating the vector database\n",
     "vector_db = Chroma.from_documents(\n",
     "    documents=chunks,\n",
     "    embedding=OllamaEmbeddings(model=\"nomic-embed-text\"),\n",
@@ -410,30 +373,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "74deb1cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collections existantes : []\n"
-     ]
-    }
-   ],
-   "source": [
-    "from chromadb import PersistentClient\n",
-    "\n",
-    "client = PersistentClient(path=\"./chroma\")  # Mets le bon chemin ici si tu as utilisé `persist_directory=...`\n",
-    "\n",
-    "# Liste toutes les collections existantes\n",
-    "collections = client.list_collections()\n",
-    "print(\"Collections existantes :\", [c.name for c in collections])\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "39eadf50-2f3d-4420-8858-94e9c1682ffa",
    "metadata": {},
@@ -457,13 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d1d6ceeb-6883-4688-b923-e771c2b2cb07",
    "metadata": {},
    "outputs": [],
    "source": [
     "# LLM from Ollama\n",
-    "local_model = \"hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF\"  # or \"llama3:8b\" for the 8B version\n",
+    "local_model = \"hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF\"  \n",
     "llm = ChatOllama(model=local_model)"
    ]
   },
@@ -573,12 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "dfe79f21-48aa-4820-aa9f-79f3d1a0a519",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete all collections in the db\n",
     "vector_db.delete_collection()"
    ]
   }
